--- a/package.json
+++ b/package.json
@@ -54,12 +54,15 @@
     "react-syntax-highlighter": "^15.6.1",
     "react-use-draggable-scroll": "^0.4.7",
     "remark": "^14.0.3",
-    "remark-gfm": "^3.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-mdx": "^3.1.0",
+    "remark-parse": "^11.0.0",
     "slick-carousel": "^1.8.1",
     "swr": "^2.3.3",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar-hide": "^1.3.1",
     "typewriter-effect": "^2.21.0",
+    "unified": "9.0.0",
     "usehooks-ts": "^2.16.0",
     "uuid": "^9.0.1",
     "yarn": "^1.22.22",
