fix: vercel 빌드 스크립트 github명 수정

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
           API_TOKEN_GITHUB: ${{ secrets.AUTO_ACTIONS }}
         with:
           source-directory: "output"
-          destination-github-username: ycseng
+          destination-github-username: YeonCheols
           destination-repository-name: portfolio2
           user-email: ${{ secrets.EMAIL }}
           commit-message: ${{ github.event.commits.message }}
