--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,6 @@ jobs:
           destination-repository-name: portfolio2
           user-email: ${{ secrets.EMAIL }} // 변경
           commit-message: ${{ github.event.commits[0].message }}
-          target-branch: main
+          target-branch: master
       - name: Test get variable exported by push-to-another-repository
         run: echo $DESTINATION_CLONED_DIRECTORY
