--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test": "jest",
     "test:ci": "jest --ci",
     "prepare": "husky install",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "prisma:studio": "npx prisma studio"
   },
   "dependencies": {
     "@giscus/react": "^2.4.0",
@@ -24,7 +25,7 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@monaco-editor/react": "^4.7.0",
-    "@prisma/client": "^4.16.2",
+    "@prisma/client": "6.5.0",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.8.2",
     "clsx": "^1.2.1",
@@ -40,7 +41,7 @@
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
-    "prisma": "^4.16.2",
+    "prisma": "6.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
