--- a/.github/workflows/release-tag.yml
+++ b/.github/workflows/release-tag.yml
@@ -15,6 +15,11 @@ jobs:
       id-token: write
 
     steps:
+      - name: 코드 체크아웃
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # 태그까지 모두 받아오기
+
       - name: Tag create
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.1
