--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
+      "@docs/*": ["./docs/*"],
       "db": ["src/common/libs/prisma"]
     }
   },
