--- a/package.json
+++ b/package.json
@@ -16,9 +16,6 @@
     "test": "jest",
     "test:ci": "jest --ci",
     "prepare": "husky install",
-    "postinstall": "prisma generate",
-    "prisma:studio": "npx prisma studio",
-    "prisma:push": "npx prisma db push",
     "fetch-schema": "NODE_TLS_REJECT_UNAUTHORIZED=0 npx swagger-typescript-api -p https://ycseng-portflio-api.vercel.app/api-json -o ./docs -n api.ts --no-client"
   },
   "dependencies": {
@@ -27,7 +24,7 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@monaco-editor/react": "^4.7.0",
-    "@prisma/client": "6.5.0",
+    "@yeoncheols/portfolio-core-ui": "0.2.0",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.8.2",
     "clsx": "^1.2.1",
@@ -43,7 +40,6 @@
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
-    "prisma": "6.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
