--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:https": "node server.js",
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
@@ -34,7 +35,7 @@
     "framer-motion": "^10.18.0",
     "gray-matter": "^4.0.3",
     "moment": "^2.30.1",
-    "next": "14.2.25",
+    "next": "15.4.1",
     "next-auth": "^4.24.11",
     "next-seo": "^6.6.0",
     "next-sitemap": "^4.2.3",
