feat: git push 이전 린트, 타입체커 적용

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "eslint src --fix && yarn format",
-    "typecheck": "tsc --noEmit --incremental false",
+    "type-check": "tsc --noEmit --incremental false",
     "format": "prettier --write .",
     "format:check": "prettier -c .",
     "test:watch": "jest --watch",
