--- a/.github/workflows/release-tag.yml
+++ b/.github/workflows/release-tag.yml
@@ -25,6 +25,11 @@ jobs:
         with:
           node-version: "18"
 
+      - name: pnpm 설치
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
       - name: 의존성 설치
         run: pnpm install --frozen-lockfile
 
