--- a/.github/workflows/release-tag.yml
+++ b/.github/workflows/release-tag.yml
@@ -47,37 +47,98 @@ jobs:
       - name: 커밋 메시지 검증 및 태그 생성
         id: tag_version
         run: |
-          # 최신 커밋 메시지 가져오기
-          COMMIT_MSG=$(git log -1 --pretty=%B)
-          echo "Debug: 커밋 메시지 = '$COMMIT_MSG'"
+                    # 머지 커밋을 건너뛰고 최근 커밋들에서 가장 높은 우선순위 타입 찾기
+          HIGHEST_PRIORITY_TYPE=""
+          COMMIT_MESSAGES=()
+          
+          # 최근 10개 커밋 확인
+          for i in {1..10}; do
+            MSG=$(git log -$i --pretty=%B | head -1)
+            if [[ ! "$MSG" =~ ^(Merge|merge|MERGE) ]]; then
+              COMMIT_TYPE=$(echo "$MSG" | sed -E 's/^([a-z]+).*/\1/')
+              COMMIT_MESSAGES+=("$MSG")
+              
+              # 우선순위 결정 (feat > fix > perf > refactor > test > chore > docs > style > build > ci)
+              case $COMMIT_TYPE in
+                "feat")
+                  HIGHEST_PRIORITY_TYPE="feat"
+                  break  # feat가 최고 우선순위이므로 더 이상 확인할 필요 없음
+                  ;;
+                "fix")
+                  if [[ "$HIGHEST_PRIORITY_TYPE" != "feat" ]]; then
+                    HIGHEST_PRIORITY_TYPE="fix"
+                  fi
+                  ;;
+                "perf")
+                  if [[ "$HIGHEST_PRIORITY_TYPE" != "feat" && "$HIGHEST_PRIORITY_TYPE" != "fix" ]]; then
+                    HIGHEST_PRIORITY_TYPE="perf"
+                  fi
+                  ;;
+                "refactor")
+                  if [[ "$HIGHEST_PRIORITY_TYPE" != "feat" && "$HIGHEST_PRIORITY_TYPE" != "fix" && "$HIGHEST_PRIORITY_TYPE" != "perf" ]]; then
+                    HIGHEST_PRIORITY_TYPE="refactor"
+                  fi
+                  ;;
+                "test")
+                  if [[ "$HIGHEST_PRIORITY_TYPE" != "feat" && "$HIGHEST_PRIORITY_TYPE" != "fix" && "$HIGHEST_PRIORITY_TYPE" != "perf" && "$HIGHEST_PRIORITY_TYPE" != "refactor" ]]; then
+                    HIGHEST_PRIORITY_TYPE="test"
+                  fi
+                  ;;
+                "chore"|"docs"|"style"|"build"|"ci")
+                  if [[ -z "$HIGHEST_PRIORITY_TYPE" ]]; then
+                    HIGHEST_PRIORITY_TYPE="$COMMIT_TYPE"
+                  fi
+                  ;;
+              esac
+            fi
+          done
+          
+          if [ -z "$HIGHEST_PRIORITY_TYPE" ]; then
+            echo "No valid commit found in recent history"
+            echo "new_tag=" >> $GITHUB_OUTPUT
+            echo "changelog=No valid commit found" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+          
+          echo "Debug: 최고 우선순위 타입 = $HIGHEST_PRIORITY_TYPE"
+          echo "Debug: 커밋 메시지들 = ${COMMIT_MESSAGES[*]}"
 
-          # 임시 파일에 커밋 메시지 저장
-          echo "$COMMIT_MSG" > /tmp/commit_msg.txt
-          echo "Debug: 임시 파일 내용 = '$(cat /tmp/commit_msg.txt)'"
+          # 첫 번째 커밋 메시지로 검증 (검증은 여전히 필요)
+          FIRST_COMMIT_MSG="${COMMIT_MESSAGES[0]}"
+          echo "$FIRST_COMMIT_MSG" > /tmp/commit_msg.txt
+          echo "Debug: 검증용 커밋 메시지 = '$FIRST_COMMIT_MSG'"
 
-          # validate-commit.js로 커밋 메시지 검증 (임시로 건너뛰기)
-          # node scripts/validate-commit.js /tmp/commit_msg.txt
+          # validate-commit.js로 커밋 메시지 검증
+          node scripts/validate-commit.js /tmp/commit_msg.txt
 
-          # 검증 통과 시 태그 생성 (임시로 항상 통과)
-          if true; then
-            # 현재 버전 가져오기 (package.json에서)
-            CURRENT_VERSION=$(node -p "require('./package.json').version")
+          # 검증 통과 시 태그 생성
+          if [ $? -eq 0 ]; then
+            # 최신 원격 태그 가져오기
+            git fetch --tags
+            LATEST_TAG=$(git tag --sort=-version:refname | head -1)
             
-            # 커밋 타입 확인 (feat, fix, breaking change 등)
-            COMMIT_TYPE=$(echo "$COMMIT_MSG" | head -1 | sed -E 's/^([a-z]+).*/\1/')
+            if [ -z "$LATEST_TAG" ]; then
+              # 태그가 없으면 0.1.0부터 시작
+              CURRENT_VERSION="0.1.0"
+            else
+              # 태그에서 버전 추출 (v0.4.1 -> 0.4.1)
+              CURRENT_VERSION=${LATEST_TAG#v}
+            fi
             
-            # 버전 증가 로직
+            echo "Debug: 현재 버전 = $CURRENT_VERSION"
+            
+            # 버전 증가 로직 (최고 우선순위 타입 사용)
             IFS='.' read -r MAJOR MINOR PATCH <<< "$CURRENT_VERSION"
             
-            case $COMMIT_TYPE in
+            case $HIGHEST_PRIORITY_TYPE in
               "feat")
                 # 새로운 기능이면 minor 버전 증가
                 NEW_MINOR=$((MINOR + 1))
                 NEW_PATCH=0
                 NEW_VERSION="$MAJOR.$NEW_MINOR.$NEW_PATCH"
                 ;;
-              "fix"|"perf"|"refactor")
-                # 버그 수정이나 성능 개선이면 patch 버전 증가
+              "fix"|"perf"|"refactor"|"test")
+                # 버그 수정, 성능 개선, 테스트면 patch 버전 증가
                 NEW_PATCH=$((PATCH + 1))
                 NEW_VERSION="$MAJOR.$MINOR.$NEW_PATCH"
                 ;;
