--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "jest",
     "test:ci": "jest --ci",
     "prepare": "husky install",
-    "fetch-schema": "NODE_TLS_REJECT_UNAUTHORIZED=0 npx swagger-typescript-api -p https://ycseng-portflio-api.vercel.app/api-json -o ./docs -n api.ts --no-client",
+    "fetch-schema": "NODE_TLS_REJECT_UNAUTHORIZED=0 npx swagger-typescript-api -p https://api.ycseng.com/api-json -o ./docs -n api.ts --no-client",
     "commit:check": "node scripts/validate-commit.js",
     "commit:help": "echo '커밋 메시지 형식: <type>(<scope>): <description>' && echo '타입: feat, fix, docs, style, refactor, perf, test, build, ci, chore, revert'"
   },
