--- a/.github/workflows/release-backup.yml
+++ b/.github/workflows/release-backup.yml
@@ -1,9 +1,8 @@
 name: Master Backup
 
 on:
-  push:
-    branches:
-      - master
+  schedule:
+    - cron: "0 20 * * 0" # 매주 월요일 05:00 KST (UTC+9)
 
 jobs:
   create-backup:
@@ -18,6 +17,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: master
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Git
